--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,67 +1,18 @@
-<!DOCTYPE html>
-<html lang="">
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Copylighted</title>
+{% extends "base.html" %}
 
-	<!-- Bootstrap CSS -->
+{% block content %}
+	{% with messages = get_flashed_messages() %}
+		{% if messages %}
+			{% for message in messages  %}
+				<div class="alert alert-warning" role="alert">
+				 {{ message }}
 
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/font-awesome.min.css') }}">
-	<link rel="apple-touch-icon" sizes="57x57" href="{{ url_for('static', filename='assets/favicon/apple-icon-57x57.png')}}">
-	<link rel="apple-touch-icon" sizes="60x60" href="{{ url_for('static', filename='assets/favicon/apple-icon-60x60.png')}}">
-	<link rel="apple-touch-icon" sizes="72x72" href="{{ url_for('static', filename='assets/favicon/apple-icon-72x72.png')}}">
-	<link rel="apple-touch-icon" sizes="76x76" href="{{ url_for('static', filename='assets/favicon/apple-icon-76x76.png')}}">
-	<link rel="apple-touch-icon" sizes="114x114" href="{{ url_for('static', filename='assets/favicon/apple-icon-114x114.png')}}">
-	<link rel="apple-touch-icon" sizes="120x120" href="{{ url_for('static', filename='assets/favicon/apple-icon-120x120.png')}}">
-	<link rel="apple-touch-icon" sizes="144x144" href="{{ url_for('static', filename='assets/favicon/apple-icon-144x144.png')}}">
-	<link rel="apple-touch-icon" sizes="152x152" href="{{ url_for('static', filename='assets/favicon/apple-icon-152x152.png')}}">
-	<link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='assets/favicon/favicon/apple-icon-180x180.png')}}">
-	<link rel="icon" type="image/png" sizes="192x192"  href="{{ url_for('static', filename='assets/favicon/android-icon-192x192.png')}}">
-	<link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='assets/favicon/favicon-32x32.png' )}}">
-	<link rel="icon" type="image/png" sizes="96x96" href="{{ url_for('static', filename='assets/favicon-96x96.png' )}}">
-	<link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='assets/favicon/favicon-16x16.png' )}}">
-	<link rel="manifest" href="{{ url_for('static', filename='favicon/manifest.json')}}">	
-	<meta name="msapplication-TileColor" content="#ffffff">
-	<meta name="msapplication-TileImage" content="{{ url_for('static', filename='assets/favicon/ms-icon-144x144.png')}}">
-	<meta name="theme-color" content="#ffffff">
-	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-		<!--[if lt IE 9]>
-			<script src="{{url_for('static', filename='js/html5.min.js')}}" type=text/javascript></script>
-			<script src="{{url_for('static', filename='js/modernizr.js')}}" type=text/javascript></script>
-			<![endif]-->
-
-		</head>
-		<body>
-			<nav class="navbar">
-				<div class="container-fluid">
-					<div class="navbar-header">
-						<button aria-expanded="false" class="navbar-toggle collapsed"
-						data-target="#bs-example-navbar-collapse-3" data-toggle=
-						"collapse" type="button"><span class="sr-only">Toggle
-						navigation</span> <span class="icon-bar"></span> <span class=
-						"icon-bar"></span> <span class="icon-bar"></span></button>
-						
-						<a class="navbar-brand" href="#"><img src="{{url_for('static', filename='assets/logo.png')}}" alt="Copylighter" height="25"></a>
-					</div>
-					<div class="collapse navbar-collapse" id=
-					"bs-example-navbar-collapse-3">
-					<a class="btn btn-default navbar-btn pull-right" href="/login"> Login <i class="fa fa-sign-in"></i> </a>
-				</div>
 			</div>
-		</nav>
-
-		<div class="container">
-			<h2>login ok</h2>
-		</div>
-
-
-		<!-- Bootstrap JavaScript -->
-		<script src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
-		<script src="{{url_for('static', filename='js/jquery.1.11.3.min.js')}}"></script>
-
-	</body>
-	</html>
+			{% endfor %}			
+		{% endif %}	    
+	{% endwith %}
+{% if current_user.is_authenticated %}
+  Hi {{ current_user.name }}!
+{% endif %}
+	
+{% endblock content %}
