--- a/templates/index.html
+++ b/templates/index.html
@@ -4,19 +4,17 @@
 {% if current_user.is_authenticated %}
   Hi {{ current_user.name }}!
 {% endif %}
-<div class="container" style="margin-top:-20px!important;">
 	<div class="row center-block">								
-		<img src="{{url_for('static',filename='assets/landing.jpg')}}" alt="" style="width:600px;height:auto; margin-top:-40px!important;" class="center-block">
-		<span class="text-center center-block" style="position: relative; z-index: 2;"> A dijital highlighting experience...</span>
-		<h1 class="text-center" style="position: relative; z-index:2; margin-top:0px">Save &amp; Read Your <strong>Quotes</strong> Everywhere</h1>
+		<img src="{{url_for('static',filename='assets/landing.jpg')}}" alt="" style="width:600px;height:auto; margin-top:-40px!important;" class="center-block animated fadeIn">
+		<span class="text-center center-block animated fadeInUp" style="position: relative; z-index: 2;"> A dijital highlighting experience...</span>
+		<h1 class="text-center animated fadeInUp" style="position: relative; z-index:2; margin-top:0px">Save &amp; Read Your <strong>Quotes</strong> Everywhere</h1>
 	</div>
 	<div class="row" style="margin-top:20px;">
-		<div class="col-md-3 col-lg-3 col-md-offset-4">
+		<div class="col-md-3 col-lg-3 col-md-offset-4 animated pulse">
 			<a class="btn btn-lg btn-info btn-block" href="register">Start Copylighting</a>
 		</div>
 		<div class="clearfix"></div>
 	</div>
-</div>
 
 {% endblock content %}
 
