--- a/templates/login.html
+++ b/templates/login.html
@@ -2,33 +2,40 @@
 
 {% block content %}
 
-<div class="container">	
+	<div class="col-md-4 col-lg-4 col-md-offset-4 col-lg-offset-4">	
 	<form action="" method="post">			
 		{{form.hidden_tag()}}
-		{{form.email.label}} 
-		{{form.email}}
+		<div class="form-group">	
+		{{form.email.label}}
 		{% if form.email.errors %} 
-		<span class="text-danger">Error</span>
-		{% endif %}
+		<span class="text-danger"><strong>This field is required</strong></span>
+		{% endif %} 
+		{{form.email(class="form-control")}}
+		</div>
 
+		<div class="form-group">	
 		{{form.password.label}}
-		{{form.password}}
-
 		{% if form.password.errors %} 
-		<span class="text-danger">Error</span>
-		{% endif %}
+		<span class="text-danger"><strong>This field is required</strong></span>
+		{% endif %} 
+		{{form.password(class="form-control")}}
+		</div>
 
-		{{form.remember_me.label}}
-		{{form.remember_me}}
-
-		{{form.submit}}
-
-
-
-
-
+		<div class="row">
+			<div class="checkbox">
+				<small>
+					{{ form.remember_me.label }}
+				</small>
+				
+				{{ form.remember_me(style="margin-left:5px;") }}
+				
+			</div>
+		</div>
+		
+		
+		{{ form.submit(class="btn btn-info btn-block btn-lg") }}
 	</form>	
+	</div>
 
-</div>
 
 {% endblock content %}
