indexteki nota bak. model required ve landing düzenlenecek. register da öyle.

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,6 @@
+<!-- LANDİNG ALANINI AYNI EVERNOTE GİBİ YAPALIM. ÜYELİĞİ HEMEN ALABİLİRİZ.
+KULLANICI ADINI KULLANMAYALIM İLK AŞAMADA. MAİL VE PASSWORD DİREK KAYIT... -->
+
 {% extends "base.html" %}
 
 {% block content %}
