landing register düzenlendi, name artık required değil

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,4 @@
-<!-- LANDİNG ALANINI AYNI EVERNOTE GİBİ YAPALIM. ÜYELİĞİ HEMEN ALABİLİRİZ.
-KULLANICI ADINI KULLANMAYALIM İLK AŞAMADA. MAİL VE PASSWORD DİREK KAYIT... -->
+<!-- LANDİNG ALANINI AYNI EVERNOTE GİBİ YAPALIM. -->
 
 {% extends "base.html" %}
 
@@ -8,16 +7,36 @@ KULLANICI ADINI KULLANMAYALIM İLK AŞAMADA. MAİL VE PASSWORD DİREK KAYIT... -
   Hi {{ current_user.name }}!
 {% endif %}
 	<div class="row center-block">								
-		<img src="{{url_for('static',filename='assets/landing.jpg')}}" alt="" style="width:600px;height:auto; margin-top:-40px!important;" class="center-block animated fadeIn">
-		<span class="text-center center-block animated fadeInUp" style="position: relative; z-index: 2;"> A dijital highlighting experience...</span>
-		<h1 class="text-center animated fadeInUp" style="position: relative; z-index:2; margin-top:0px">Save &amp; Read Your <strong>Quotes</strong> Everywhere</h1>
+		<img src="{{url_for('static',filename='assets/landing.jpg')}}" alt="" style="width:550px;height:auto; margin-top:-80px!important;" class="center-block animated fadeIn">
+		<span class="text-center center-block animated fadeInUp" style="position: relative; z-index: 2; margin-top:-20px;"> A dijital highlighting experience...</span>
+		<h2 class="text-center animated fadeInUp" style="position: relative; z-index:2; margin-top:0px">Save &amp; Read Your <strong>Quotes</strong> Everywhere</h2>
 	</div>
-	<div class="row" style="margin-top:20px;">
-		<div class="col-md-3 col-lg-3 col-md-offset-4 animated pulse">
-			<a class="btn btn-lg btn-info btn-block" href="register">Start Copylighting</a>
-		</div>
-		<div class="clearfix"></div>
+
+	<div class="col-md-12 col-lg-12" style="margin-top:20px;">
+		<form action="" method="post" class="form-inline">					
+			{{form.hidden_tag()}}
+			<div class="form-group animated fadeInUp col-md-3 col-lg-3 col-md-offset-3 col-lg-offset-3">	
+			{{form.email.label}}
+			{% if form.email.errors %} 
+			<span class="text-danger"><strong>This field is required</strong></span>
+			{% endif %} 
+			{{form.email(class="form-control")}}
+			</div>
+
+			<div class="form-group animated fadeInUp col-md-3 col-lg-3">	
+			{{form.password.label}}
+			{% if form.password.errors %} 
+			<span class="text-danger"><strong>This field is required</strong></span>
+			{% endif %} 
+			{{form.password(class="form-control")}}
+			</div>
+			<div class="clearfix"></div>
+			<div class="col-md-6 col-md-offset-3 col-lg-offset-3" style="margin-top:15px;">
+			{{ form.submit(class="btn btn-info btn-block animated fadeInUp") }}
+			</div>	
+		</form>
 	</div>
+	
 
 {% endblock content %}
 
