--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
 	<div class="col-md-4 col-lg-4 col-md-offset-4 col-lg-offset-4">	
 	<form action="" method="post">			
 		{{form.hidden_tag()}}
-		<div class="form-group">	
+		<div class="form-group animated fadeInUp">	
 		{{form.email.label}}
 		{% if form.email.errors %} 
 		<span class="text-danger"><strong>This field is required</strong></span>
@@ -13,7 +13,7 @@
 		{{form.email(class="form-control")}}
 		</div>
 
-		<div class="form-group">	
+		<div class="form-group animated fadeInUp">	
 		{{form.password.label}}
 		{% if form.password.errors %} 
 		<span class="text-danger"><strong>This field is required</strong></span>
@@ -22,7 +22,7 @@
 		</div>
 
 		<div class="row">
-			<div class="checkbox">
+			<div class="checkbox animated fadeInUp">
 				<small>
 					{{ form.remember_me.label }}
 				</small>
@@ -32,8 +32,7 @@
 			</div>
 		</div>
 		
-		
-		{{ form.submit(class="btn btn-info btn-block btn-lg") }}
+		{{ form.submit(class="btn btn-info btn-block btn-lg animated fadeInUp") }}
 	</form>	
 	</div>
 
