--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 {% if current_user.is_authenticated %}
-  Hi {{ current_user.email }}
+  Hi {{ current_user.name }}
 {% endif %}
 	
 
