--- a/templates/register.html
+++ b/templates/register.html
@@ -8,6 +8,14 @@
 		{{form.hidden_tag()}}
 
 		<div class="form-group animated fadeInUp">	
+		{{form.name.label}}
+		{% if form.name.errors %} 
+		<span class="text-danger"><strong>This field is required</strong></span>
+		{% endif %} 
+		{{form.name(class="form-control")}}
+		</div>
+
+		<div class="form-group animated fadeInUp">	
 		{{form.email.label}}
 		{% if form.email.errors %} 
 		<span class="text-danger"><strong>This field is required</strong></span>
