--- a/templates/index.html
+++ b/templates/index.html
@@ -14,14 +14,23 @@
 		<form action="" method="post" class="form-inline">					
 			
 			{{form.hidden_tag()}}
+
+			<div class="form-group animated fadeInUp col-md-3 col-lg-3 col-md-offset-1 col-lg-offset-1">	
+				{{form.name.label}}
+				<div class="clearfix"></div>
+				{% if form.name.errors %} 
+				<span class="text-danger"><strong>This field is required</strong></span>
+				{% endif %} 
+				{{form.name(class="form-control input-lg", placeholder="Set Username")}}
+			</div>
 			
-			<div class="form-group animated fadeInUp col-md-3 col-lg-3 col-md-offset-3 col-lg-offset-3">	
+			<div class="form-group animated fadeInUp col-md-3 col-lg-3">	
 				{{form.email.label}}
 				<div class="clearfix"></div>
 				{% if form.email.errors %} 
 				<span class="text-danger"><strong>This field is required</strong></span>
 				{% endif %} 
-				{{form.email(class="form-control input-lg", placeholder="Set Username")}}
+				{{form.email(class="form-control input-lg", placeholder="Set Email")}}
 			</div>
 
 			<div class="form-group animated fadeInUp col-md-3 col-lg-3">	
