--- a/templates/login.html
+++ b/templates/login.html
@@ -21,7 +21,7 @@
 		{{form.password(class="form-control")}}
 		</div>
 
-		<div class="row">
+		<!--<div class="row">
 			<div class="checkbox animated fadeInUp">
 				<small>
 					{{ form.remember_me.label }}
@@ -30,8 +30,8 @@
 				{{ form.remember_me(style="margin-left:5px;") }}
 				
 			</div>
-		</div>
-		
+		</div>-->
+	  
 		{{ form.submit(class="btn btn-info btn-block btn-lg animated fadeInUp") }}
 	</form>	
 	</div>
