--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,13 @@
 {% extends "base.html" %}
 
 {% block content %}
+	<!--check if homepage-->
+	<span id="homepage-flag" style="display: none"></span>
+	<!--check if homepage-->
 
 	<div class="row center-block animated fadeIn">								
-		<img src="{{url_for('static',filename='assets/landing.jpg')}}" alt="" style="width:550px;height:auto; margin-top:-80px!important;" class="center-block animated fadeIn">
-		<span class="text-center center-block animated fadeInUp" style="position: relative; z-index: 2; margin-top:-20px;"> A dijital highlighting experience...</span>
+		<img src="{{url_for('static',filename='assets/landing.png')}}" alt="" style="width:500px;height:auto; margin-top:-30px!important;" class="center-block animated fadeIn">
+		<span class="text-center center-block animated fadeInUp" style="position: relative; z-index: 2; margin-top:0px;"> A digital highlighting experience...</span>
 		<h2 class="text-center animated fadeInUp" style="position: relative; z-index:2; margin-top:0px">Save &amp; Read Your <strong>Quotes</strong> Everywhere</h2>
 	</div>
 
@@ -25,8 +28,9 @@
 			</div>
 			
 			<div class="form-group animated fadeInUp col-md-3 col-lg-3">	
-				{{form.email.label}}
+				{{form.email.label}} <span class="text-danger"><strong>{{ regex }}</strong></span>
 				<div class="clearfix"></div>
+
 				{% if form.email.errors %} 
 				<span class="text-danger"><strong>This field is required</strong></span>
 				{% endif %} 
