--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,8 +4,60 @@
 
 {% block content %}
 {% if current_user.is_authenticated %}
-  Hi {{ current_user.name }}
+Hi {{ current_user.name }}
 {% endif %}
-	
+
+
+
+
+<!--ADD QUOTE-->
+<div class="modal fade" id="add_quote" tabindex="-1" role="dialog" aria-labelledby="adding">
+	<div class="modal-dialog" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+				<h4 class="modal-title" id="adding">ADD A QUOTE</h4>
+			</div>
+			<div class="modal-body">
+				<!--form goes here-->
+
+
+				<form action="" method="post">					
+
+					{{form.hidden_tag()}}
+
+					<div class="form-group animated fadeInUp">	
+					{{form.content.label}}
+						<div class="clearfix"></div>
+						{% if form.content.errors %} 
+						<span class="text-danger"><strong>This field is required</strong></span>
+						{% endif %} 
+						{{form.content(class="form-control input-lg", placeholder="Write quote in here")}}
+					</div>
+
+					<div class="form-group animated fadeInUp">	
+						{{form.tags.label}} <span class="text-danger"><strong>{{ regex }}</strong></span>
+						<div class="clearfix"></div>
+
+						{% if form.tags.errors %} 
+						<span class="text-danger"><strong>This field is required</strong></span>
+						{% endif %} 
+						{{form.tags(class="form-control input-md", placeholder="history, sociology, poetry, Goethe")}}
+					</div>
+
+					<div class="clearfix"></div>
+					<div class="" style="margin-top:15px;">
+						{{ form.submit(class="btn btn-success btn-lg btn-block animated fadeInUp") }}
+					</div>	
+				</form>
+				<div class="clearfix"></div>
+
+				<!--form goes here-->
+			</div>
+			
+		</div><!--modal content-->
+	</div><!--modal dialog-->
+</div><!--modal-->
+<!--ADD QUOTE-->
 
 {% endblock content %}
