--- a/templates/register.html
+++ b/templates/register.html
@@ -16,7 +16,7 @@
 		</div>
 
 		<div class="form-group animated fadeInUp">	
-		{{form.email.label}}
+		{{form.email.label}} <span class="text-danger"><strong> {{ regex }}</strong></span>
 		{% if form.email.errors %} 
 		<span class="text-danger"><strong>This field is required</strong></span>
 		{% endif %} 
