--- a/templates/profileS2.html
+++ b/templates/profileS2.html
@@ -3,10 +3,33 @@
 
 {% block content %}
 
-<div class="col-md-8 col-lg-8 col-md-offset-2 col-lg-offset-2">
+
+<div class="col-md-3 col-lg-3 animated fadeIn">
+	<div class="h3">Tags</div><br/>
+	{% for tagContainer in current_user.notes  %}
+		{% for tagInner in tagContainer.tags %}
+			
+		<span class="small" style="margin-bottom:5px; display: inline-block;">
+			<a class="btn btn-default btn-sm">
+				{% filter title %}
+					{{ tagInner }} 					
+				{% endfilter %}
+				
+				<!--<span class="label label-default">{{ tagContainer.tags|length }}</span>-->
+			</a>
+		
+
+		</span>
+		{% endfor %}
+	{% endfor %}
+	
+	
+</div><!--left-->
+
+<div class="col-md-8 col-lg-8">
 	<div class="row animated fadeIn">
 		<h3>Search</h3>
-			<form action="{{ url_for('search') }}" name="searchForm" method="post">
+			<form action="" method="post">
 			{{ search_form.hidden_tag() }}
 			<div class="input-group">				
 				{{ search_form.search(class="form-control", placeholder="Searh in Tags or Quotes") }}
@@ -18,7 +41,7 @@
 	</div><!--row sonu-->
 
 	<div class="clearfix"></div>
-
+	
 	{% for item in current_user.notes|sort(attribute='created_at',reverse=True)  %}
 	<div class="row animated fadeInUp" style="margin-top:20px;">		
 		<h3><strong>{{ item.title }}...</strong></h3>
@@ -36,6 +59,7 @@
 			<div class="clearfix"></div>
 			<div class="btn-group" role="group" aria-label="*" style="margin-top:10px;">
 				<button type="button" class="btn btn-default btn-sm"><i class="fa fa-share-alt"></i> Share</button>
+				<button type="button" class="btn btn-default btn-sm"><i class="fa fa-heart"></i> Favorite</button>
 				<button type="button" class="btn btn-default btn-sm"><i class="fa fa-trash"></i> Delete</button>
 			</div>		
 		</blockquote>
