--- a/templates/delete_modal_from_search.html
+++ b/templates/delete_modal_from_search.html
@@ -17,7 +17,7 @@
 				<div class="modal-footer">
 					<div class="pull-right">
 						<button type="button" class="btn btn-default pull-left" data-dismiss="modal">Close</button>
-						<form action="{{ url_for('delete_quote', id=item.id) }}" method="post" class="pull-left" style="margin-left:8px;">
+						<form action="{{ url_for('delete_quote', id=item._id) }}" method="post" class="pull-left" style="margin-left:8px;">
 							{{ delete_quote.hidden_tag() }}
 							{{ delete_quote.submit(class="btn btn-danger") }}
 
