--- a/templates/base.html
+++ b/templates/base.html
@@ -70,9 +70,12 @@
 								<li class="pull-left">
 									<button id="addQuote" class="btn btn-success navbar-btn pull-left" data-toggle="modal" data-target="#add_quote">Add Quote <i class="fa fa-plus"></i> </button>	
 								</li>
-								<li class="pull-left">
+
+								<!--profil butonu-->
+								<!--<li class="pull-left">
 									<a class="btn btn-default navbar-btn pull-left" href="{{url_for('profile')}}/{{ current_user.slug }}"><i class="fa fa-user"></i> {{ current_user.name }} </a>	
-								</li>
+								</li>-->
+								
 								<li class="pull-left">
 									<a class="btn btn-link navbar-btn pull-left" href="{{ url_for('logout') }}"> Log Out <i class="fa fa-sign-out"></i> </a>
 								</li>
