--- a/templates/profile.html
+++ b/templates/profile.html
@@ -36,30 +36,30 @@
 	</div><!--row sonu-->
 
 	<div class="clearfix"></div>
+	
+	<!--eğer not yoksa uyarı verir-->
 	<div class="row" style="margin-top:20px;">
 		{#- if current_user.notes < 1 %}<h3>You haven't any Quote yet. You can add one</h3> <button id="addQuote" class="btn btn-success navbar-btn pull-left" data-toggle="modal" data-target="#add_quote">Add Quote <i class="fa fa-plus"></i> </button>	{%- endif -%#}
 	</div>
 
 	{% for item in current_user.notes|sort(attribute='created_at',reverse=True)  %}
 
-	<div class="row animated fadeInUp" style="margin-top:20px;">
+	<div class="row animated fadeInUp quote-box" style="margin-top:20px; margin-bottom:40px;">
 		<h3><strong>{{ item.content|truncate(120) }}...</strong></h3>
-		<blockquote>
+		
 			<span>
 				{% for itemT in item.tags  %}
 				<span class="label label-default"> <i class="fa fa-tag"></i>  {{ itemT }}</span>
 				{% endfor %}
 			</span>
-			<p></p>
+			
 
+			<blockquote style="margin-top:30px;">
 			<!--{{ item.content|truncate(420, True) }}-->
 			{{ item.content }}
 			<footer><cite title="Source Title"><a href="{{item.URLLink}}" target="_blank">{{ item.URLLink }}</cite></a> <span class="pull-right">{{ item.created_at|humanize() }} </span></footer>
 			<div class="clearfix"></div>
-			<div class="btn-group" role="group" aria-label="*" style="margin-top:10px;">
-
-
-
+			<div class="btn-group pull-right" role="group" aria-label="*" style="margin-top:10px;">
 				<button id="deleteQuote" class="btn btn-danger btn-sm" data-toggle="modal" data-target="#delete_quote_modal">Delete Quote <i class="fa fa-trash"></i> </button>
 				<!--<button type="button" class="btn btn-default btn-sm"><i class="fa fa-trash"></i> Delete</button>-->
 			</div>
@@ -107,7 +107,6 @@
 					<div class="form-group">
 						{{ form.tags.label }}
 						<abbr title="If you add with tags you can easly find when you search ( example:scholl note)" class="initialism"> <strong>TAGS</strong></abbr>
-						<span class="text-danger"><strong>{{ regex }}</strong></span>
 						<div class="clearfix"></div>
 
 
@@ -123,12 +122,12 @@
 					<div class="form-group">
 						{{ form.URLLink.label }}
 						<abbr title="If you add with tags you can easly find when you search ( example:scholl note)" class="initialism"> <strong>URLLink</strong></abbr>
-						<!--<span class="text-danger"><strong>{{ regex }}</strong></span>-->
+						<span class="text-danger"><strong>{{ regex }}</strong></span>
 						<div class="clearfix"></div>
 
 
 						{% if form.URLLink.errors %}
-						<!--<span class="text-danger"><strong>This field is required</strong></span>-->
+						<span class="text-danger"><strong>Something wrong </strong></span>
 						{% endif %}
 						{{form.URLLink(class="form-control input-md", placeholder="Source URL")}}
 					</div>
