--- a/templates/base.html
+++ b/templates/base.html
@@ -108,7 +108,12 @@
 
 
 				{% block footer %}
-
+					<footer class="animated fadeInUp">
+						<div class="container">
+							<div class="col-md-8 col-lg-8 col-md-offset-2 col-lg-offset-2">
+							<span class="small"> <i class="fa fa-envelope"></i> support@copylighter.com</span>
+						</div>
+					</div>
 				{% endblock footer %}
 				<script type="text/javascript">
 					$(function() {
