--- a/templates/search.html
+++ b/templates/search.html
@@ -43,7 +43,7 @@
 
 {% if result != None %}
 	{% for item in result  %}
-	<div class="row animated fadeInUp" style="margin-top:20px;">
+	<div class="row animated fadeInUp quote-box" style="margin-top:40px;margin-bottom:40px;">
 		<blockquote>
 			<h3><strong>{{ item.content|truncate(120) }}...</strong></h3>
 			<span>
