--- a/static/css/main.css
+++ b/static/css/main.css
@@ -25,3 +25,23 @@ body{
     box-shadow: 0px 0px 26px -5px rgba(0,0,0,0.20);
 }
 	
+footer{
+	position: relative;
+	margin-top:40px;
+	margin-bottom:20px;
+
+}
+
+blockquote{
+	line-height: 27px;
+
+}
+
+.quoteLink{
+	font-size: 12px;
+	margin-top:10px;
+}
+
+.block{
+	display:block;
+}
