--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,10 @@
 			{{form.hidden_tag()}}
 
 			<div class="form-group animated fadeInUp col-md-3 col-lg-3 col-md-offset-1 col-lg-offset-1">	
-				{{form.name.label}}
+				{{form.name.label}} 
+				<span class="text-danger"><strong>{{regex_name}}</strong></span>
+				<span class="text-danger"><strong>{{regex}}</strong></span>
+
 				<div class="clearfix"></div>
 				{% if form.name.errors %} 
 				<span class="text-danger"><strong>This field is required</strong></span>
@@ -28,7 +31,9 @@
 			</div>
 			
 			<div class="form-group animated fadeInUp col-md-3 col-lg-3">	
-				{{form.email.label}} <span class="text-danger"><strong>{{ regex }}</strong></span>
+				{{form.email.label}} 
+				<span class="text-danger"><strong>{{ regex }}</strong></span>
+				<span class="text-danger"><strong>{{regex_email}}</strong></span>
 				<div class="clearfix"></div>
 
 				{% if form.email.errors %} 
